feat(auth): add authentication store, continue login handling

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,7 +6,11 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "vitest/globals"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@core/*": ["src/app/core/*"]
+    }
   },
   "include": [
     "src/**/*.d.ts",
