feat: add planet loading, add msw for mocking
Starts mock handling using MSW package, starts planet handling for dashboard

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "mockServiceWorker.js",
+                "input": "src",
+                "output": "/"
               }
             ],
             "styles": [
