--- a/package.json
+++ b/package.json
@@ -41,7 +41,13 @@
     "@angular/cli": "^21.0.5",
     "@angular/compiler-cli": "^21.0.0",
     "jsdom": "^27.1.0",
+    "msw": "^2.12.7",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
+  },
+  "msw": {
+    "workerDirectory": [
+      "src"
+    ]
   }
 }
