test(auth): Login component and authentication store tests

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -9,7 +9,8 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "@core/*": ["src/app/core/*"]
+      "@core/*": ["src/app/core/*"],
+      "@env/*": ["src/environments/*"]
     }
   },
   "include": [
