--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^21.0.0",
     "@jsverse/transloco": "^8.2.0",
     "@ngrx/signals": "^21.0.1",
+    "lodash-es": "^4.17.22",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -40,6 +41,7 @@
     "@angular/build": "^21.0.5",
     "@angular/cli": "^21.0.5",
     "@angular/compiler-cli": "^21.0.0",
+    "@types/lodash-es": "^4.17.12",
     "jsdom": "^27.1.0",
     "msw": "^2.12.7",
     "typescript": "~5.9.2",
